<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:padding="@dimen/mainPadding"
    >

	<!-- ====================== Presentation ====================== -->

	<TextView style="@style/PrefsGroup" android:text="@string/prefsGroupPresentation" android:layout_marginTop="0dip" /> 
    
   	<TextView style="@style/PrefsHint" 
   		android:layout_span="2"
   		android:text="@string/prefsHintRestart"
   		/>

    <TableLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="@dimen/mainPadding"
	    >
	    <TableRow>
	    	<TextView style="@style/PrefsLabel" 
	    		android:text="@string/prefsListStyle" 
	    		android:layout_gravity="center_vertical"
	    		/>
	    	<Spinner android:id="@+id/prefsListStyle"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dip"
			    />
	    </TableRow>
	    <TableRow>
	    	<TextView style="@style/PrefsLabel"
	    		android:text="@string/prefsSortLabel" 
	    		android:layout_gravity="center_vertical"
	    		/>
	    	<Spinner android:id="@+id/prefsSortOption"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dip"
			    />
	    </TableRow>
    </TableLayout>

    <CheckBox style="@style/PrefsLabel"
    	android:id="@+id/prefsKeepState"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/prefsKeepState"
	    />
	    
    
	<!-- ====================== Special Ops ====================== -->
	
	<TextView style="@style/PrefsGroup" android:text="@string/prefsGroupExtras" /> 
	
    <CheckBox style="@style/PrefsLabel"
    	android:id="@+id/prefsDeletionActive"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/prefsShowDelete"
	    />
	    
    <CheckBox style="@style/PrefsLabel"
    	android:id="@+id/prefsOptimiseLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/prefsOptimiseLabel"
	    />
   	<TextView style="@style/PrefsHint" 
   		android:text="@string/prefsOptimiseHint"
   		/>
	    
    <Button
    	android:id="@+id/prefsActionSortAlpha"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/prefsSortAZ"
	    android:layout_marginTop="20dip"
	    android:layout_marginBottom="10dip"
	    />

	<!-- ====================== Setup ====================== -->
	
	<TextView style="@style/PrefsGroup" android:text="@string/prefsGroupSetup" /> 
	
	<LinearLayout
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:orientation="horizontal"
	    android:padding="@dimen/mainPadding"
	    >
    
	    <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/prefsSeparator"
		    style="@style/PrefsLabel"
		    />
		    
	    <EditText
	    	android:id="@+id/prefsSeparator"
		    android:layout_width="60dip"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dip"
		    android:singleLine="true"
		    android:maxLength="2"
		    />
	    
    </LinearLayout>
    
    <CheckBox style="@style/PrefsLabel"
    	android:id="@+id/prefsFullUpdateOnChange"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/prefsUpdateWithNewSep"
	    />
	    
	<!-- ====================== done ====================== -->
	<View
	    android:layout_height="15dip"
	    android:layout_width="fill_parent"
		/>
		
</LinearLayout>
